new-world/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-2
  labels:
    name: app-2
