new-world/deployment.yml
# Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-new-world
  namespace: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-new-world
  template:
    metadata:
      labels:
        app: test-new-world
    spec:
      containers:
        - name: test-new-world
          image: k8s.gcr.io/echoserver:1.4
          ports:
            - containerPort: 8080
              protocol: TCP
